# bug-investigator

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
bug_investigator/: config.py  llm.py  main.py  report_normalization.py  schemas.py  state.py
bug_investigator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bug_investigator/agents/: base.py  coordinator.py  fix_planner.py  log_analyst.py  repo_context.py  reproduction.py  reviewer.py  triage.py
bug_investigator/io/: readers.py  trace.py  writers.py
bug_investigator/orchestration/: graph.py  policy.py
bug_investigator/tools/: logs.py  patching.py  repo.py  sandbox.py
inputs/: bug_report.json  bug_report.md
inputs/mini_repo/: cache.py  client.py  main.py  service.py
outputs/ui_run_01687a/: investigation_report.json  trace.jsonl
outputs/ui_run_01687a/artifacts/: suggested.patch
outputs/ui_run_01687a/repro/: repro_case.py
outputs/ui_run_439ea7/: investigation_report.json  trace.jsonl
outputs/ui_run_439ea7/repro/: repro_case.py
tests/: test_graph_normalization.py  test_logs_tools.py  test_policy.py  test_report_artifacts.py  test_report_normalization.py  test_repro_validation.py  test_reproduction_bootstrap.py  test_sandbox.py
